[package]
name = "lineup"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"

[dependencies]
either = { version = "1.5", default-features = false }
#fringe = { path = "../libfringe", default-features = false, features = ["alloc"] }
fringe = { git = "https://github.com/gz/libfringe.git", default-features = false, features = ["alloc"], branch = "patch-2" }
log = "0.4.6"
hashbrown = { version = "0.6.0", features = [ "nightly" ] }
rawtime = "0.0.1"
x86 = "0.29"
backtracer = { git = "https://github.com/gz/backtracer.git", rev = "909d60" }

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "*"
